bottom layout 키보드 사용시 사라지게 처리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         </activity>
         <activity
             android:name=".Main.ReviewMainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            >
         </activity>
         <activity android:name=".Setting.SettingMainActivity">
         </activity>
