--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
 
     <application
         android:name=".ApplicationClass"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:ignore="InnerclassSeparator"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        tools:replace="android:allowBackup">
         <activity android:name=".Login.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -30,8 +31,7 @@
         </activity>
         <activity
             android:name=".Main.ReviewMainActivity"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait">
         </activity>
         <activity android:name=".Setting.SettingMainActivity">
         </activity>
@@ -40,6 +40,8 @@
         <activity android:name=".Main.Photos.ReviewPhotoActivity">
         </activity>
         <activity android:name=".Main.Photos.GalleryMaxActivity">
+        </activity>
+        <activity android:name=".Community.InnerActivity.CommunityInnerActivity">
         </activity>
     </application>
 
