shared element 잘안됌.. community쪽에 등록창 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         </activity>
         <activity android:name=".Community.InnerActivity.CommunityInnerActivity">
         </activity>
+        <activity android:name=".Community.InnerActivity.CommunityQuestionActivity">
+        </activity>
     </application>
 
 </manifest>
