카카오 연동 추가 로그인 로그아웃

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,21 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_app_key"/>
+
+        <activity
+            android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Main.ReviewMainActivity"
             android:screenOrientation="portrait">
@@ -41,9 +56,9 @@
         </activity>
         <activity android:name=".Main.Photos.GalleryMaxActivity">
         </activity>
-        <activity android:name=".Community.InnerActivity.CommunityInnerActivity">
-        </activity>
         <activity android:name=".Community.InnerActivity.CommunityQuestionActivity">
+        </activity>
+        <activity android:name=".Login.LoginActivity">
         </activity>
     </application>
 
