--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
     dataBinding {
         enabled = true
     }
+    subprojects {
+        repositories {
+            mavenCentral()
+            maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
+        }
+    }
 }
 
 dependencies {
@@ -43,6 +49,12 @@ dependencies {
     compile 'com.android.support:support-compat:27.1.1'
     compile 'com.android.support:support-v4:27.1.1'
     compile 'com.android.support:multidex:1.0.3'
+
+    //kakao
+    compile 'com.kakao.sdk:usermgmt:1.9.0'
+    compile 'com.kakao.sdk:kakaolink:1.9.0'
+    compile 'com.kakao.sdk:kakaotalk:1.9.0'
+    compile 'com.kakao.sdk:kakaostory:1.9.0'
 
     //글라이드
     compile 'com.github.bumptech.glide:glide:4.7.1'
