댓글 달기 테스트 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
         </activity>
         <activity android:name=".Main.Photos.GalleryMaxActivity">
         </activity>
-        <activity android:name=".Community.InnerActivity.CommunityQuestionActivity">
+        <activity android:name=".Community.Question.CommunityQuestionActivity">
         </activity>
         <activity android:name=".Login.LoginActivity">
         </activity>
