커뮤티니 이미지 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,8 @@
         </activity>
         <activity android:name=".Login.LoginActivity">
         </activity>
+        <activity android:name=".Community.Question.CommunityQuestionPhotoActivity">
+        </activity>
     </application>
 
 </manifest>
