--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,8 @@
         </activity>
         <activity android:name=".Community.Question.CommunityQuestionPhotoActivity">
         </activity>
+        <activity android:name=".Login.ReviewRegister.RegisterActivity">
+        </activity>
     </application>
 
 </manifest>
