--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,9 +78,7 @@ dependencies {
     //글라이드 이미지변환
     compile 'jp.wasabeef:glide-transformations:2.0.2'
 
-    //decor
-    compile 'com.bignerdranch.android:simple-item-decoration:1.0.0'
-
     //google 인증
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'com.android.support:exifinterface:28.0.0-alpha3'
 }
