--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:theme="@style/CustomAppTheme"
         tools:ignore="InnerclassSeparator"
         tools:replace="android:allowBackup">
         <activity android:name=".Login.SplashActivity">
