--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,8 @@
         </activity>
         <activity android:name=".Login.ReviewRegister.RegisterActivity">
         </activity>
+        <activity android:name=".Login.ReviewRegister.RegisterProfileImageActivity">
+        </activity>
     </application>
 
 </manifest>
