Recycerview성능 변경 밎 세팅메인 뷰 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,8 @@
         </activity>
         <activity android:name=".Login.ReviewRegister.RegisterProfileImageActivity">
         </activity>
+        <activity android:name=".Setting.Photo.SettingPhotoActivity">
+        </activity>
     </application>
 
 </manifest>
