--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,5 @@ dependencies {
 
     //google 인증
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
-    implementation 'com.android.support:exifinterface:28.0.0-alpha3'
+    implementation 'com.android.support:exifinterface:27.1.0'
 }
