--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
+    //RxJAVA
+    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     //kakao
     compile 'com.kakao.sdk:usermgmt:1.11.0'
     compile 'com.kakao.sdk:kakaolink:1.11.0'
@@ -79,4 +84,8 @@ dependencies {
     //google 인증
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.android.support:exifinterface:27.1.0'
+
+
+    //api 21 아래에 ripple 이펙트 넣기위해
+    implementation 'com.github.rey5137:material:1.2.5'
 }
