--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,22 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
+
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        // These docs use an open ended version so that our plugin
+        // can be updated quickly in response to Android tooling updates
+
+        // We recommend changing it to the latest version from our changelog:
+        // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -30,11 +46,19 @@ android {
         }
     }
 }
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+        transitive = true;
+    }
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -84,7 +108,6 @@ dependencies {
     //google 인증
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.android.support:exifinterface:27.1.0'
-
 
     //api 21 아래에 ripple 이펙트 넣기위해
 //    implementation 'com.github.rey5137:material:1.2.5'
