홈 메인 변경 공지사항 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,13 @@ android {
             maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
         }
     }
+    dexOptions {
+        preDexLibraries true
+        maxProcessCount 8
+    }
+    aaptOptions {
+        cruncherEnabled true
+    }
 }
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -57,7 +64,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
-        transitive = true;
+        transitive = true
     }
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
