--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,6 @@
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key"/>
-
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="3860cdf1413877bb2c860a0278c8b42737d7b8b2"/>
@@ -103,11 +102,13 @@
             android:name=".Setting.Photo.SettingPhotoActivity"
             android:screenOrientation="portrait">
         </activity>
-
-
-
-        <activity android:name=".Home.HomeMainActivity"
-                  android:screenOrientation="portrait">>
+        <activity
+            android:name=".Home.HomeMainActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".Setting.Notification.SettingNotificationActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
